2010-07-26  Tobias Burnus  <burnus@net-b.de>

PR fortran/45066
        * trans-io.c (build_dt): Use NULL_TREE rather than NULL
        for call to transfer_namelist_element.
        * trans-decl.c (gfc_get_symbol_decl): Also set sym->backend_decl
        for -fwhole-file.

2010-07-26  Tobias Burnus  <burnus@net-b.de>

        PR fortran/45066
        * gfortran.dg/namelist_62.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162532 138bc75d-0d04-0410-961f-82ee72b054a4